# TimePicker

./: .gitignore  CMakeLists.txt  README.md
qml/: AmCircularHourPicker.qml  CircularMinute.qml  CircularMinutePicker.qml  CircularPathLabel.qml  EuCircularHourPicker.qml  main.qml  qml.qrc
src/: main.cpp
